--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+
+Assets/Packages
+Assets/NuGet
+NuGet.*
+packages.*
+Packages/*
